fix(docs): typo

--- a/docs/resources/qbx_management/convars.mdx
+++ b/docs/resources/qbx_management/convars.mdx
@@ -10,7 +10,7 @@ description: Configuration variables (convars) for qbx_management. Learn about t
 Below is a list of convars used within qbx_management.
 The value shown in the example is the default value for each convar.
 
-## enableBridge
+## enableGroupManagement
 
 Set to `"true"` to allow bosses to manage job/gang grades. Specifically the grade name.
 
