feat(docs): vehiclePersistenceType convar

--- a/docs/resources/qbx_core/convars.mdx
+++ b/docs/resources/qbx_core/convars.mdx
@@ -137,6 +137,16 @@ setr qbx:enableVehiclePersistence "false"
 
 Type: `boolean`
 
+## vehiclePersistenceType
+
+When set to "full", will also spawn back player owned vehicles after server restarts.
+
+```lua
+setr qbx:vehiclePersistenceType "semi"
+```
+
+Type: `string`
+
 ## acknowledge
 
 Enables or disabled the Qbox documentation console message.
