feat(blog): remote db access tutorial

--- a/blog/2025/03-26-addon-weapons.mdx
+++ b/blog/2025/03-26-addon-weapons.mdx
@@ -1,6 +1,6 @@
 ---
 authors: chatdisabled
-title: "How to install custom weapons in Qbox using ox_inventory"
+title: "Installing custom weapons using ox_inventory"
 keywords: [qbox, fivem, weapons, addon, ox_inventory, custom weapons]
 description: Learn how to add and configure custom weapons in your Qbox FiveM server using ox_inventory. This guide covers setup, configuration, and implementation of addon weapons.
 slug: /install-custom-weapons
