--- a/blog/2025/06-17-linux-server.mdx
+++ b/blog/2025/06-17-linux-server.mdx
@@ -1,6 +1,6 @@
 ---
 authors: codexis
-title: "How to Install FiveM Server on Linux"
+title: "Installing server artifacts on Linux"
 keywords: [qbox, fivem, server, linux, ubuntu, debian, mariadb, installation]
 description: Complete step-by-step guide to install and configure a FiveM server on Linux (Ubuntu/Debian) with MariaDB database setup.
 slug: /linux-server-tutorial
@@ -13,7 +13,7 @@ This comprehensive guide will walk you through setting up a complete FiveM serve
 ## Prerequisites
 
 Before we begin, make sure you have:
-- A fresh Ubuntu 20.04+ or Debian 11+ server (check [1of1servers](https://1of1servers.com/))
+- A fresh Ubuntu 20.04+ or Debian 11+ server (check [1of1servers](https://hosting.qbox.re/))
 - Root or sudo access
 - At least 4GB RAM and 20GB free disk space
 - A CPU with a minimum of 2 cores and a clock speed of at least 3 GHz.
