--- a/blog/2025/4-19-vscode-intellisense.mdx
+++ b/blog/2025/4-19-vscode-intellisense.mdx
@@ -1,6 +1,6 @@
 ---
 authors: ihyajb
-title: "How to Set Up VSCode for FiveM and RedM Lua Scripting"
+title: "Setting up VSCode for FiveM and RedM Lua Scripting"
 keywords: [qbox, fivem, vscode, addon, intellisense]
 description: Learn how to setup VSCode for FiveM/RedM script development
 slug: /vscode-setup
