feat(blog/db): additional warning

--- a/blog/2025/11-19-db-remote-access.mdx
+++ b/blog/2025/11-19-db-remote-access.mdx
@@ -98,8 +98,12 @@ In case of hijacking or if someone guesses your password, there will be no damag
 </Tabs>
 
 Now we will create a SQL user called `special_user` with the password `strong_password_here`. You can copy and paste the following.
+:::warning
+Do this line per line so you can change the password and username.
+If you copy paste every line at once it will directly go through without you having the chance to change stuff.
+:::
 :::info
-Please change the password to something strong. Save it, remember it, and keep it secure.
+Please change the password to something strong. Save it, remember it, and keep it secure. Also change the name of the user for added obscurity.
 :::
 
 ```sql
