fix(docs/loki): remove extra text

--- a/docs/tebex/loki-logging/database.mdx
+++ b/docs/tebex/loki-logging/database.mdx
@@ -9,7 +9,7 @@ Someone has an impossible amount of money? Inspect their logs further and act ac
 
 ## Setup
 
-To set this up, please first follow [this tutorial](/blog/db-remote-access). It will explain how you can set up a proper MySQL user to make backups.
+To set this up, please first follow [this tutorial](/blog/db-remote-access). It will explain how you can set up a proper MySQL user.
 After that is done, we can add a new data source in your Grafana organization. Under `Connections > Data sources`, you will find an "Add New Data Source" button.
 Once you click here, you can search for `mysql` and add the MySQL Data Source.
 
