Corrected typo in introduction docs

--- a/docs/introduction/introduction.mdx
+++ b/docs/introduction/introduction.mdx
@@ -37,7 +37,7 @@ Learn how to convert your resources to Qbox in [Converting from QBCore](./conver
 ## Note for Developers
 
 Planning on utilizing qbx_core in your next resource?
-Make sure to read the [Developer's Guide](./developers) to learn about principles that make you avoid bad practices and help you in having a better developer expetience.
+Make sure to read the [Developer's Guide](./developers) to learn about principles that make you avoid bad practices and help you in having a better developer experience.
 
 ## Contributing to Qbox
 
